tests/semantic_errors/sasha28_3.tl
-- test case 28.
-- Description : function semantic: declare builtin function(error)

-- Expected : '3'
require "ifj21" 
global readi : function()
function me() : string   
end                      
me()                     

